UEFI runtime driver is used instead of application and minor fixes
ImgArchStartBootApplication to OslFwpKernelSetupPhase1 to ntoskrnl.exe. Need to implement serial output for debugging and OslArchTransferToKernel is not really required or could be replaced instead of OslFwpKernelSetupPhase1 .

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,12 +7,5 @@ edition = "2021"
 
 [dependencies]
 log = { version = "0.4.17", default-features = false }
-uefi = { git = "https://github.com/rust-osdev/uefi-rs.git", features = ["alloc"] }
-uefi-services = { git = "https://github.com/rust-osdev/uefi-rs.git", branch = "main" }
-
-
-[patch.crates-io]
-uefi = { git = "https://github.com/rust-osdev/uefi-rs.git", features = ["alloc"] }
-uefi-macros = { git = "https://github.com/rust-osdev/uefi-rs.git", branch = "main" }
-uefi-raw = { git = "https://github.com/rust-osdev/uefi-rs.git", branch = "main" }
-uefi-services = { git = "https://github.com/rust-osdev/uefi-rs.git", branch = "main" }
+uefi = {version = "0.21.0", features = ["alloc"] }
+uefi-services = "0.18.0"
