--- a/driver/Makefile.toml
+++ b/driver/Makefile.toml
@@ -15,7 +15,7 @@ dependencies = ["build-driver"]
 ignore_errors = true
 script = [
     "cd %TARGET_PATH%",
-    "rename driver.dll lol.sys",
+    "rename driver.dll redlotus.sys",
 ]
 
 [tasks.sign]
@@ -28,5 +28,5 @@ script = [
     "if not exist %TARGET_PATH%/DriverCertificate.cer ( makecert -r -pe -ss PrivateCertStore -n CN=DriverCertificate %TARGET_PATH%/DriverCertificate.cer ) else ( echo Certificate already exists. )",
 
     # Sign the driver
-    "signtool sign /a /v /s PrivateCertStore /n DriverCertificate /fd certHash /t http://timestamp.digicert.com %TARGET_PATH%/lol.sys"
+    "signtool sign /a /v /s PrivateCertStore /n DriverCertificate /fd certHash /t http://timestamp.digicert.com %TARGET_PATH%/redlotus.sys"
 ]
