Driver manual mapper with simple .data function pointer hook

--- a/driver/Cargo.toml
+++ b/driver/Cargo.toml
@@ -21,6 +21,7 @@ kernel-log = "0.1.2" # https://crates.io/crates/kernel-log
 kernel-build = "0.1.0" # https://crates.io/crates/kernel-build
 kernel-alloc = { version = "0.2.1", features = ["pool-tag"] } # https://crates.io/crates/kernel-alloc
 obfstr = "0.4.1" # https://crates.io/crates/obfstr
+bstr = { version = "0.2.17", default-features = false} # https://crates.io/crates/bstr
 
 [dependencies.winapi]
 git = "https://github.com/Trantect/winapi-rs.git"
